# mirza-bot

./: .env.example  .gitignore  Engineering Guide.md  PRD.md  README.md  User Flow.md  docker-compose.yml  pyproject.toml  sample.env
app/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  pytest.ini
app/apps/: __init__.py
app/apps/accounts/: __init__.py  clients.py  handlers.py  schemas.py
app/apps/ai/: __init__.py  clients.py  pending_tasks.py  result_content_cache.py  routes.py  schemas.py  task_poller.py
app/apps/bots/: __init__.py  base_bot.py  bot_actions.py  handlers.py  keyboards.py  middlewares.py  poller.py  routes.py  services.py  url_fetcher.py
app/apps/bots/bale/: __init__.py  bot.py  handler.py  markup.py  normalizer.py  renderer.py  routes.py
app/apps/bots/common/: __init__.py  actions.py  auth_gate.py  billing.py  callbacks.py  context.py  delivery.py  docx.py  events.py  files.py  handler.py  handler_context.py  keyboards.py  link_router.py  media_flow.py  menu.py  models.py  onboarding.py  renderer_registry.py  settings.py  urls.py
app/apps/bots/runtime/: __init__.py  handlers.py  poller.py  registry.py
app/apps/bots/telegram/: __init__.py  bot.py  gateway.py
app/docs/: ai-toolkit-bot-prd.md  implementation-roadmap.md  project-architecture.md
app/server/: __init__.py  config.py  db.py  server.py
app/tests/: conftest.py  test_accounts.py  test_ai_toolkit_clients.py  test_app_handler.py  test_auth_gate.py  test_base_bot.py  test_bots_adapters.py  test_clients.py  test_failure_modes.py  test_media_client.py  test_middlewares.py  test_pending_tasks.py  test_poller_routes.py  test_redis_aux.py  test_result_content_cache.py  test_runtime.py  test_runtime_extra.py  test_server_db.py  test_services.py  test_telegram_gateway.py  test_url_fetcher.py  test_utils_pure.py
app/tests/apps/: test_bale_docx.py  test_callbacks_content_cache.py  test_common_modules.py  test_extended_coverage.py
app/tests/utils/: test_markdown_html.py
app/texts/: en.yaml  fa.yaml
app/utils/: __init__.py  b64tools.py  i18n.py  markdown_html.py  media.py  texttools.py  webhook_auth.py
app/utils/clients/: __init__.py  _base.py  ai.py  finance.py  media.py  toolkit.py
apps/accounts/: handlers.py  schemas.py
apps/ai/: clients.py  ocr.py  routes.py  schemas.py  task_poller.py
apps/bots/: bot_actions.py  handlers.py  keyboards.py  middlewares.py  models.py  schemas.py  services.py
server/: config.py  redis.py  server.py
tests/: conftest.py
utils/: media.py  texttools.py
