[project]
name = "mirza-bot"
version = "0.1.9"
description = "Mirza Bot — multi-messenger AI bot gateway (Telegram/Bale) with OCR, transcription, chat, webpage extraction, and credit-based billing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiocache>=0.12.3",
    "fastapi>=0.139.0",
    "fastapi-mongo-base>=1.5.7",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "redis>=8.0.1",
    "telegram-bale-bot[aiohttp]>=4.27.0",
    "telethon>=1.44.0",
    "usso>=0.31.6",
]

[dependency-groups]
dev = [
    # "beanie<2",
    "ipython>=9.15.0",
    "mongomock-motor>=0.0.36",
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-httpx>=0.36.2",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.20",
    "ty>=0.0.57",
    "types-aiofiles>=25.1.0.20260518",
]

[tool.ruff]
line-length = 88         # Black's default line length
target-version = "py313"
fix = true
# unsafe-fixes = true
preview = true

[tool.ruff.lint]
select = [
    "F",     # Pyflakes: critical errors and unused code
    "E",     # Pyflakes: errors
    "W",     # PEP8: formatting issues
    "I",     # isort: import sorting
    "UP",    # pyupgrade: modern syntax
    "B",     # bugbear: potential bugs
    "T",     # debugger / print statement checks
    "C",     # complexity: complexity checking
    "A",     # avoids shadowing Python built-ins
    "ASYNC", # async/await syntax
    "SIM",   # simplify: cleaner code
    "PERF",  # performance optimizations
    "TRY",   # better try/excepts
    "N",     # naming conventions
    "S",     # security checks
    "ANN",   # type annotation checks
    "T20",   # no print()
    "C4",    # comprehension: better loops
    "COM",   # enforces trailing commas where needed.
    "EXE",   # executable: executable checking
    "ISC",   # implicit string concatenation
    "G",     # misuse of logging string interpolation
    "D",     # docstrings: docstring checking
    "ERA",   # remove commented code
    "RUF",   # ruff-specific improvements
]
ignore = ["TRY003", "COM812", "B008", "D202", "D203", "D209", "D212", "D413"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D100",  # Test modules are named by behavior, not public API docs.
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "ANN",
    "RUF029",
    "E111",
    "E501",
    "G004",
    "RUF076",
    "S101",
    "S105",  # Tests use fake tokens and API keys.
]
"apps/bots/common/handler.py" = ["D102", "C901"]
"apps/bots/common/renderer_registry.py" = ["D102"]
"apps/bots/telegram/gateway.py" = ["D102", "C901"]
"apps/bots/bale/renderer.py" = ["D102"]
"apps/bots/common/docx.py" = ["S314", "S405"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
disable_error_code = ["override"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Accessing the 'model_fields' attribute on the instance is deprecated:DeprecationWarning:lazy_model\\.parser\\.new",
]

[tool.ty.rules]
# unresolved-attribute = "ignore"
# unresolved-import = "ignore"
# division-by-zero = "warn"
# deprecated = "error"
